--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="appewtc.masterung.myrobot.MainActivity">
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="clickReadDweet"
+        android:id="@+id/button" />
+
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
